# britz

./: .gitignore  README.md  initialize.sh  pyproject.toml
.github/workflows/: ci.yml  codeql-analysis.yml  ossar-analysis.yml
britz/: __init__.py  __main__.py  cli.py  exceptions.py  io.py  objects.py  parser.py
docs/: Makefile  conf.py  index.rst
docs/source/: britz.rst  modules.rst
requirements/: base.txt  local.txt  test.txt
tests/britz/: helpers.py  test_cli.py  test_helpers.py
