
# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module="britz"
author="Moritz Eilfort"
author-email="britz@jimfawkes.com"
home-page="https://github.com/JimFawkes/britz"
requires=[
    "pglast==1.13"
]
requires-python=">=3.8"
description-file="README.md"
classifiers=[
    "Intended Audience :: Developers",
    'Natural Language :: English',
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.flit.metadata.requires-extra]
test=[
	"pytest==6.1.1",
	"pytest-cov",
]

[tool.flit.entrypoints.console_scripts]
britz="britz.cli:cli"
